# elevenlabs-speech-to-text

./: .gitignore  README.md  elevenlabs-speech-text.py  elevenlabs_transcribe.py  json_to_social_srt.py  json_to_srt.py  parse_json.py  pyproject.toml  transcript_transform.py
elevenlabs_toolkit/: __init__.py  paths.py
scripts/: transcribe.py  transform.py
src/elevenlabs_toolkit/: __init__.py  io_paths.py  pause_detection.py  selectors.py  timecode.py  transcript_utils.py  translit.py  uzbek_cleanup.py
src/elevenlabs_toolkit/cli/: __init__.py  transcribe.py  transform.py
src/elevenlabs_toolkit/core/: __init__.py  srt_builder.py  stt_client.py
tests/: test_cli_uzbek_clean_flow.py  test_html_conversion_flow.py  test_path_selectors.py  test_pause_detection.py  test_social_srt_split.py  test_srt_split.py  test_timing_sentence_split.py  test_translit.py  test_uzbek_cleanup.py
